[gd_scene load_steps=9 format=3 uid="uid://doyt24685r6bj"]

[ext_resource type="Script" uid="uid://bs3sx1fus0bj0" path="res://script/games/mole_level_complete.gd" id="1_mole"]
[ext_resource type="FontFile" uid="uid://d2eub6rd80tjp" path="res://asset/games/soupofjustice.ttf" id="3_4n79r"]
[ext_resource type="Texture2D" uid="uid://c55e2ghwmvqda" path="res://asset/games/wack-a-mole/GUI/star-coin.png" id="4_22ndk"]
[ext_resource type="PackedScene" uid="uid://benwj6w5un0vk" path="res://scene/games/coin_particles.tscn" id="7_1r4r6"]
[ext_resource type="AudioStream" uid="uid://dxpul16876qad" path="res://audio/victory-chime.mp3" id="8_jv7kj"]
[ext_resource type="Shader" uid="uid://5ioxufo56rw0" path="res://asset/games/circle.gdshader" id="9_circle"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_raqs2"]
shader = ExtResource("9_circle")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel_bg"]
draw_center = false
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -300.0
offset_right = 150.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HeaderCircle" type="ColorRect" parent="VBoxContainer"]
material = SubResource("ShaderMaterial_raqs2")
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="CircleContent" type="Control" parent="VBoxContainer/HeaderCircle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLabel" type="Label" parent="VBoxContainer/HeaderCircle/CircleContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_4n79r")
theme_override_font_sizes/font_size = 24
text = "Level"
horizontal_alignment = 1

[node name="LevelNumber" type="Label" parent="VBoxContainer/HeaderCircle/CircleContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_4n79r")
theme_override_font_sizes/font_size = 72
text = "03"
horizontal_alignment = 1

[node name="StarsContainer" type="HBoxContainer" parent="VBoxContainer/HeaderCircle"]
layout_mode = 0
offset_top = 240.0
offset_right = 300.0
offset_bottom = 320.0
alignment = 1

[node name="Star1" type="TextureRect" parent="VBoxContainer/HeaderCircle/StarsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("4_22ndk")
expand_mode = 2

[node name="Star2" type="TextureRect" parent="VBoxContainer/HeaderCircle/StarsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("4_22ndk")
expand_mode = 2

[node name="Star3" type="TextureRect" parent="VBoxContainer/HeaderCircle/StarsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("4_22ndk")
expand_mode = 2

[node name="Content" type="Panel" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel_bg")

[node name="PanelContent" type="VBoxContainer" parent="VBoxContainer/Content"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.0
offset_right = 134.0
offset_bottom = 360.0
grow_horizontal = 2
alignment = 2

[node name="ClearedLabel" type="Label" parent="VBoxContainer/Content/PanelContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_4n79r")
theme_override_font_sizes/font_size = 60
text = "Cleared!"
horizontal_alignment = 1

[node name="ScoreContainer" type="VBoxContainer" parent="VBoxContainer/Content/PanelContent"]
visible = false
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer/Content/PanelContent/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_4n79r")
theme_override_font_sizes/font_size = 28
text = "Score"

[node name="ScoreValue" type="Label" parent="VBoxContainer/Content/PanelContent/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("3_4n79r")
theme_override_font_sizes/font_size = 36
text = "37829"

[node name="VSpacer1" type="Control" parent="VBoxContainer/Content/PanelContent"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="CoinContainer" type="HBoxContainer" parent="VBoxContainer/Content/PanelContent"]
layout_mode = 2

[node name="CoinLabel" type="Label" parent="VBoxContainer/Content/PanelContent/CoinContainer"]
custom_minimum_size = Vector2(134, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_4n79r")
theme_override_font_sizes/font_size = 28
text = "Coin"

[node name="CoinValue" type="Label" parent="VBoxContainer/Content/PanelContent/CoinContainer"]
custom_minimum_size = Vector2(134, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("3_4n79r")
theme_override_font_sizes/font_size = 36
text = "1250"
horizontal_alignment = 2

[node name="VSpacer2" type="Control" parent="VBoxContainer/Content/PanelContent"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="BonusContainer" type="HBoxContainer" parent="VBoxContainer/Content/PanelContent"]
layout_mode = 2

[node name="BonusLabel" type="Label" parent="VBoxContainer/Content/PanelContent/BonusContainer"]
custom_minimum_size = Vector2(134, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_4n79r")
theme_override_font_sizes/font_size = 28
text = "Bonus"

[node name="BonusValue" type="Label" parent="VBoxContainer/Content/PanelContent/BonusContainer"]
custom_minimum_size = Vector2(134, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("3_4n79r")
theme_override_font_sizes/font_size = 36
text = "150"
horizontal_alignment = 2

[node name="VSpacer3" type="Control" parent="VBoxContainer/Content/PanelContent"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer/Content/PanelContent"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/Content/PanelContent/ButtonsContainer"]
layout_mode = 2
text = "Back"

[node name="ReplayButton" type="Button" parent="VBoxContainer/Content/PanelContent/ButtonsContainer"]
layout_mode = 2
text = "Replay"

[node name="NextButton" type="Button" parent="VBoxContainer/Content/PanelContent/ButtonsContainer"]
layout_mode = 2
text = "Next"

[node name="CoinParticles" parent="." instance=ExtResource("7_1r4r6")]
position = Vector2(360, 700)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_jv7kj")
autoplay = true

[node name="MoleLevelCompletePanel" type="CanvasLayer" parent="."]
layer = 20
script = ExtResource("1_mole")
